<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/activity_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.hp.TranSaver.Login"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/transaver_logo"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/logo_image" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tran"
                android:textColor="@color/Tran_color"
                android:textSize="@dimen/logo_font_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saver"
                android:textColor="@color/saver_color"
                android:textSize="@dimen/logo_font_size"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/email_1"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/textSize"
                    android:maxLength="50"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="7dp"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true" >
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50"
                    android:hint="@string/password"

                    android:drawablePadding="7dp"
                    android:drawableStart="@drawable/key"
                    android:textSize="@dimen/font_size"
                    android:inputType="textPassword"
                    android:padding="10dp"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/min_font_size"
                android:text="@string/forget_password"
                android:textColor="@color/redirect_text_color"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:onClick="forgetpassword_link"/>
        </LinearLayout>
        <Button
            android:text="@string/login_button_title"
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_design"
            android:textSize="@dimen/textSize"
            android:textColor="@color/button_text_color"
            android:elevation="@dimen/elevation_button"
          />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/error_txt_login"
            android:textColor="@color/error_text_color"
            android:textSize="@dimen/error_text_size"
            android:layout_gravity="center"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account_yet"
                android:textSize="@dimen/min_font_size"
                android:textColor="@color/redirect_text_color"
                android:layout_marginTop="25dp"
                android:id="@+id/text_1"/>

            <TextView
                android:id="@+id/link_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/create_one"
                android:textSize="@dimen/min_font_size"
                android:textColor="@color/redirect_text_color"
                android:layout_toEndOf="@id/text_1"
                android:onClick="signup_link" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
