<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >
    <LinearLayout
        android:id="@+id/activity_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.hp.TranSaver.Login"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/transaver_logo"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/logo_image" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tran"
                android:textColor="@color/Tran_color"
                android:textSize="@dimen/logo_font_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saver"
                android:textColor="@color/saver_color"
                android:textSize="@dimen/logo_font_size"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/email_forgetpass"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/textSize"
                    android:maxLength="50"
                    android:drawablePadding="7dp"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <Button
            android:text="@string/reset"
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_design"
            android:textSize="@dimen/textSize"
            android:textColor="@color/button_text_color"
            android:elevation="@dimen/elevation_button"
            android:onClick="reset"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no_email_found"
            android:textColor="@color/error_text_color"
            android:textSize="@dimen/error_text_size"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/now_you_can"
                android:textSize="@dimen/min_font_size"
                android:id="@+id/text_1"
                android:textColor="@color/redirect_text_color"/>

            <TextView
                android:id="@+id/link_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/log_in"
                android:textSize="@dimen/min_font_size"
                android:textColor="@color/redirect_text_color"
                android:onClick="login_fromforget"/>
        </RelativeLayout>


    </LinearLayout>
</ScrollView>