<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.hp.TranSaver.MainActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_weight="0.3"
            >
            <ImageView
                android:id="@+id/yellow"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/yellow"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/logo_image"
                />
            <ImageView
                android:id="@+id/red"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/red"
                android:contentDescription="@string/logo_image"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            android:layout_weight="0.3"
            >
            <ImageView
                android:id="@+id/dark_blue"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/logo_image"
                android:src="@drawable/dark_blue"/>
            <ImageView
                android:id="@+id/blue"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/logo_image"
                android:src="@drawable/blue"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="0.3"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tran"
                android:textColor="@color/Tran_color"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saver"
                android:textColor="@color/saver_color"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.4"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button_design2"
                android:elevation="@dimen/elevation_button"
                android:gravity="center_horizontal|center_vertical"
                android:padding="10dp"
                android:text="@string/sign_up_button_title"
                android:textColor="@color/button_color"
                android:textSize="@dimen/textSize"/>

            <Button
                android:id="@+id/button_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_design"
                android:elevation="@dimen/elevation_button"
                android:gravity="center_horizontal|center_vertical"
                android:padding="10dp"
                android:text="@string/login_button_title"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/textSize"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>